# compilador

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  xpto.html
compilador/: LAparaC.py  codegen.py  constants.py  exceptions.py  file_reader.py  lexical.py  main.py  my_token.py  schemas.py  scope.py  semantic.py  symbolsTable.py  syntactic.py  temp.py  utils.py
compilador/parser/: LangAlg.g4  LangAlg.interp  LangAlg.py  LangAlg.tokens  LangAlgLexer.interp  LangAlgLexer.py  LangAlgLexer.tokens  LangAlgListener.py  LangAlgParser.py  LangAlgVisitor.py
tests/: conftest.py  test_utils.py
tests/files/input/: test1.la  test1.txt  test2.la
tests/files/output/: out1.txt
