[project]
name = "compilador"
version = "0.1.0"
description = "Compilador escrito em python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "cyclopts>=3.13.1",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.3.5",
    "pytest-sugar>=1.0.0",
    "ruff>=0.11.6",
    "taskipy>=1.14.1",
]

[project.scripts]
compilador = "compilador.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = ["compilador/parser/*"]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
pre_test = 'task format'
test1 = 'java -jar compiladores-corretor-automatico-1.0-SNAPSHOT-jar-with-dependencies.jar "compilador lexical" gcc temp casos-de-teste "811455, 802534, 811797" t1'
test2 = 'java -jar compiladores-corretor-automatico-1.0-SNAPSHOT-jar-with-dependencies.jar "compilador syntactical" gcc temp casos-de-teste "811455, 802534, 811797" t2'
test3 = 'java -jar compiladores-corretor-automatico-1.0-SNAPSHOT-jar-with-dependencies.jar "compilador semantical" gcc temp casos-de-teste "811455, 802534, 811797" t3'
test4 = 'java -jar compiladores-corretor-automatico-1.0-SNAPSHOT-jar-with-dependencies.jar "compilador semantical" gcc temp casos-de-teste "811455, 802534, 811797" t4'
test5 = 'java -jar compiladores-corretor-automatico-1.0-SNAPSHOT-jar-with-dependencies.jar "compilador codegen" gcc temp casos-de-teste "811455, 802534, 811797" t5'
test = 'task test1 && task test2 && task test3 && task test4 && task test5'
